parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    DO
    FOR
    THEN

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> DATA_TYPE IDENTIFIER EQUAL_SIGN expression SEMICOLON
Rule 5     statement -> DATA_TYPE IDENTIFIER SEMICOLON
Rule 6     statement -> IDENTIFIER EQUAL_SIGN expression SEMICOLON
Rule 7     statement -> IF LPAREN expression RPAREN block
Rule 8     statement -> IF LPAREN expression RPAREN block ELSE block
Rule 9     statement -> WHILE LPAREN expression RPAREN block
Rule 10    statement -> expression SEMICOLON
Rule 11    block -> LBRACE statement_list RBRACE
Rule 12    block -> LBRACE RBRACE
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression MULTIPLY expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression EQUALS expression
Rule 18    expression -> expression NOT_EQUAL expression
Rule 19    expression -> expression GREATER_THAN expression
Rule 20    expression -> expression GREATER_EQUAL expression
Rule 21    expression -> expression LESS_THAN expression
Rule 22    expression -> expression LESS_EQUAL expression
Rule 23    expression -> MINUS expression
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    expression -> INT
Rule 26    expression -> FLOAT
Rule 27    expression -> STRING
Rule 28    expression -> BOOLEAN
Rule 29    expression -> IDENTIFIER

Terminals, with rules where they appear

BOOLEAN              : 28
CHAR                 : 
DATA_TYPE            : 4 5
DIVIDE               : 16
DO                   : 
ELSE                 : 8
EQUALS               : 17
EQUAL_SIGN           : 4 6
FLOAT                : 26
FOR                  : 
GREATER_EQUAL        : 20
GREATER_THAN         : 19
IDENTIFIER           : 4 5 6 29
IF                   : 7 8
INT                  : 25
LBRACE               : 11 12
LESS_EQUAL           : 22
LESS_THAN            : 21
LPAREN               : 7 8 9 24
MINUS                : 14 23
MULTIPLY             : 15
NOT_EQUAL            : 18
PLUS                 : 13
RBRACE               : 11 12
RPAREN               : 7 8 9 24
SEMICOLON            : 4 5 6 10
STRING               : 27
THEN                 : 
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

block                : 7 8 8 9
expression           : 4 6 7 8 9 10 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 24
program              : 0
statement            : 2 3
statement_list       : 1 2 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . DATA_TYPE IDENTIFIER EQUAL_SIGN expression SEMICOLON
    (5) statement -> . DATA_TYPE IDENTIFIER SEMICOLON
    (6) statement -> . IDENTIFIER EQUAL_SIGN expression SEMICOLON
    (7) statement -> . IF LPAREN expression RPAREN block
    (8) statement -> . IF LPAREN expression RPAREN block ELSE block
    (9) statement -> . WHILE LPAREN expression RPAREN block
    (10) statement -> . expression SEMICOLON
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    DATA_TYPE       shift and go to state 4
    IDENTIFIER      shift and go to state 5
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . DATA_TYPE IDENTIFIER EQUAL_SIGN expression SEMICOLON
    (5) statement -> . DATA_TYPE IDENTIFIER SEMICOLON
    (6) statement -> . IDENTIFIER EQUAL_SIGN expression SEMICOLON
    (7) statement -> . IF LPAREN expression RPAREN block
    (8) statement -> . IF LPAREN expression RPAREN block ELSE block
    (9) statement -> . WHILE LPAREN expression RPAREN block
    (10) statement -> . expression SEMICOLON
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    $end            reduce using rule 1 (program -> statement_list .)
    DATA_TYPE       shift and go to state 4
    IDENTIFIER      shift and go to state 5
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14

    statement                      shift and go to state 15
    expression                     shift and go to state 6

state 3

    (3) statement_list -> statement .

    DATA_TYPE       reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    INT             reduce using rule 3 (statement_list -> statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    BOOLEAN         reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> DATA_TYPE . IDENTIFIER EQUAL_SIGN expression SEMICOLON
    (5) statement -> DATA_TYPE . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 16


state 5

    (6) statement -> IDENTIFIER . EQUAL_SIGN expression SEMICOLON
    (29) expression -> IDENTIFIER .

    EQUAL_SIGN      shift and go to state 17
    SEMICOLON       reduce using rule 29 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 29 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 29 (expression -> IDENTIFIER .)
    MULTIPLY        reduce using rule 29 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 29 (expression -> IDENTIFIER .)
    EQUALS          reduce using rule 29 (expression -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 29 (expression -> IDENTIFIER .)
    GREATER_THAN    reduce using rule 29 (expression -> IDENTIFIER .)
    GREATER_EQUAL   reduce using rule 29 (expression -> IDENTIFIER .)
    LESS_THAN       reduce using rule 29 (expression -> IDENTIFIER .)
    LESS_EQUAL      reduce using rule 29 (expression -> IDENTIFIER .)


state 6

    (10) statement -> expression . SEMICOLON
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . MULTIPLY expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . EQUALS expression
    (18) expression -> expression . NOT_EQUAL expression
    (19) expression -> expression . GREATER_THAN expression
    (20) expression -> expression . GREATER_EQUAL expression
    (21) expression -> expression . LESS_THAN expression
    (22) expression -> expression . LESS_EQUAL expression

    SEMICOLON       shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    MULTIPLY        shift and go to state 21
    DIVIDE          shift and go to state 22
    EQUALS          shift and go to state 23
    NOT_EQUAL       shift and go to state 24
    GREATER_THAN    shift and go to state 25
    GREATER_EQUAL   shift and go to state 26
    LESS_THAN       shift and go to state 27
    LESS_EQUAL      shift and go to state 28


state 7

    (7) statement -> IF . LPAREN expression RPAREN block
    (8) statement -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 29


state 8

    (24) expression -> LPAREN . expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 30

state 9

    (9) statement -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 32


state 10

    (23) expression -> MINUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 33

state 11

    (25) expression -> INT .

    SEMICOLON       reduce using rule 25 (expression -> INT .)
    PLUS            reduce using rule 25 (expression -> INT .)
    MINUS           reduce using rule 25 (expression -> INT .)
    MULTIPLY        reduce using rule 25 (expression -> INT .)
    DIVIDE          reduce using rule 25 (expression -> INT .)
    EQUALS          reduce using rule 25 (expression -> INT .)
    NOT_EQUAL       reduce using rule 25 (expression -> INT .)
    GREATER_THAN    reduce using rule 25 (expression -> INT .)
    GREATER_EQUAL   reduce using rule 25 (expression -> INT .)
    LESS_THAN       reduce using rule 25 (expression -> INT .)
    LESS_EQUAL      reduce using rule 25 (expression -> INT .)
    RPAREN          reduce using rule 25 (expression -> INT .)


state 12

    (26) expression -> FLOAT .

    SEMICOLON       reduce using rule 26 (expression -> FLOAT .)
    PLUS            reduce using rule 26 (expression -> FLOAT .)
    MINUS           reduce using rule 26 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 26 (expression -> FLOAT .)
    DIVIDE          reduce using rule 26 (expression -> FLOAT .)
    EQUALS          reduce using rule 26 (expression -> FLOAT .)
    NOT_EQUAL       reduce using rule 26 (expression -> FLOAT .)
    GREATER_THAN    reduce using rule 26 (expression -> FLOAT .)
    GREATER_EQUAL   reduce using rule 26 (expression -> FLOAT .)
    LESS_THAN       reduce using rule 26 (expression -> FLOAT .)
    LESS_EQUAL      reduce using rule 26 (expression -> FLOAT .)
    RPAREN          reduce using rule 26 (expression -> FLOAT .)


state 13

    (27) expression -> STRING .

    SEMICOLON       reduce using rule 27 (expression -> STRING .)
    PLUS            reduce using rule 27 (expression -> STRING .)
    MINUS           reduce using rule 27 (expression -> STRING .)
    MULTIPLY        reduce using rule 27 (expression -> STRING .)
    DIVIDE          reduce using rule 27 (expression -> STRING .)
    EQUALS          reduce using rule 27 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 27 (expression -> STRING .)
    GREATER_THAN    reduce using rule 27 (expression -> STRING .)
    GREATER_EQUAL   reduce using rule 27 (expression -> STRING .)
    LESS_THAN       reduce using rule 27 (expression -> STRING .)
    LESS_EQUAL      reduce using rule 27 (expression -> STRING .)
    RPAREN          reduce using rule 27 (expression -> STRING .)


state 14

    (28) expression -> BOOLEAN .

    SEMICOLON       reduce using rule 28 (expression -> BOOLEAN .)
    PLUS            reduce using rule 28 (expression -> BOOLEAN .)
    MINUS           reduce using rule 28 (expression -> BOOLEAN .)
    MULTIPLY        reduce using rule 28 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 28 (expression -> BOOLEAN .)
    EQUALS          reduce using rule 28 (expression -> BOOLEAN .)
    NOT_EQUAL       reduce using rule 28 (expression -> BOOLEAN .)
    GREATER_THAN    reduce using rule 28 (expression -> BOOLEAN .)
    GREATER_EQUAL   reduce using rule 28 (expression -> BOOLEAN .)
    LESS_THAN       reduce using rule 28 (expression -> BOOLEAN .)
    LESS_EQUAL      reduce using rule 28 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 28 (expression -> BOOLEAN .)


state 15

    (2) statement_list -> statement_list statement .

    DATA_TYPE       reduce using rule 2 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    MINUS           reduce using rule 2 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement_list statement .)
    INT             reduce using rule 2 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement_list statement .)
    STRING          reduce using rule 2 (statement_list -> statement_list statement .)
    BOOLEAN         reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 16

    (4) statement -> DATA_TYPE IDENTIFIER . EQUAL_SIGN expression SEMICOLON
    (5) statement -> DATA_TYPE IDENTIFIER . SEMICOLON

    EQUAL_SIGN      shift and go to state 34
    SEMICOLON       shift and go to state 35


state 17

    (6) statement -> IDENTIFIER EQUAL_SIGN . expression SEMICOLON
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 36

state 18

    (10) statement -> expression SEMICOLON .

    DATA_TYPE       reduce using rule 10 (statement -> expression SEMICOLON .)
    IDENTIFIER      reduce using rule 10 (statement -> expression SEMICOLON .)
    IF              reduce using rule 10 (statement -> expression SEMICOLON .)
    WHILE           reduce using rule 10 (statement -> expression SEMICOLON .)
    MINUS           reduce using rule 10 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 10 (statement -> expression SEMICOLON .)
    INT             reduce using rule 10 (statement -> expression SEMICOLON .)
    FLOAT           reduce using rule 10 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 10 (statement -> expression SEMICOLON .)
    BOOLEAN         reduce using rule 10 (statement -> expression SEMICOLON .)
    $end            reduce using rule 10 (statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 10 (statement -> expression SEMICOLON .)


state 19

    (13) expression -> expression PLUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 37

state 20

    (14) expression -> expression MINUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 38

state 21

    (15) expression -> expression MULTIPLY . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 39

state 22

    (16) expression -> expression DIVIDE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 40

state 23

    (17) expression -> expression EQUALS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 41

state 24

    (18) expression -> expression NOT_EQUAL . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQUALS expression
    (18) expression -> . expression NOT_EQUAL expression
    (19) expression -> . expression GREATER_THAN expression
    (20) expression -> . expression GREATER_EQUAL expression
    (21) expression -> . expression LESS_THAN expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . INT
    (26) expression -> . FLOAT
    (27) expression -> . STRING
    (28) expression -> . BOOLEAN
    (29) expression -> . IDENTIFIER

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 42

state 25
